Fixed alignment issue with footer content on smaller screens.

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -145,11 +145,9 @@ a:hover {
 
 footer {
     flex-grow: 1;
-    align-content: flex-end;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
     width: 100%;
     max-width: 48rem;
     margin-top: 1.5rem;
@@ -158,10 +156,25 @@ footer {
     font-weight: 600;
 }
 
+@media screen and (min-width: 640px) {
+    footer {
+        align-content: flex-end;
+        justify-content: space-between;
+        align-items: center;
+    }
+    footer>span {
+        margin-top: 4px;
+        text-align: unset;
+    }
+}
+
 #copyright {
     align-self: flex-start;
+    text-align: center;
 }
 
 #final-message {
+    margin-top: 4px;
     align-self: flex-end;
+    text-align: center;
 }
